# fibble

./: Cargo.toml  README.md
benches/: entropy.rs
docs/: index.html  script.js  styles.css
docs/assets/: wordle_secrets.txt
src/: lib.rs  main.rs
