[package]
name = "fibble"
version = "0.1.0"
edition = "2024"
default-run = "fibble"

[dependencies]
rand = "0.8"
once_cell = "1.19"
indicatif = "0.17"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "entropy"
harness = false
